--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		ul { margin: 0 0 32px 17px; }
 		#self_description { width: 450px; float: left; text-align: justify }
 		#self_description p { font-family: Georgia, Serif; font-style: italic; color: #666; }
-		dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 100px; border-right: 1px solid #999;  }
+		dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 100px; float: left; height: 100px; border-right: 1px solid #999;  }
 		dd { width: 600px; float: right; }
 		dd.clear { float: none; margin: 0; height: 15px; }
 	</style>
@@ -35,9 +35,10 @@
 		<h1 class="western"> Andrii Dubas </h1>
 
 		<p>
-		email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991.gmail.com </a> <br/>
-		location: Lodz, Poland </br>
-		CV online: <a href="http://adubas.github.io/">adubas.github.io/</a>
+		Email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991.gmail.com </a> <br/>
+		Location: Lodz, Poland </br>
+		Born: 7 February 1991<br />
+		CV online: <a href=" https://andrey-dubas.github.io/adubas/"> andrey-dubas.github.io/adubas/ </a>
 		</p>
 	</div>
 
@@ -60,7 +61,7 @@
 
 
 
-        <div class="clear"></div>
+        <div class="clear" style="height: 30px" ></div>
 
 
 	<dl>
@@ -76,7 +77,7 @@
 			<li> IPC: apache thrift </li>
 			<li> experience in Linux userspace development, general understanding of kernel-space. </li>
 			<li> Multithreading </li>
-			<li> c++11 standard,&nbsp; </li>
+			<li> c++11 standard </li>
 			<li> make, cmake  </li>
 			<li> networking </li>
 			<li> ATAPI protocol </li>
@@ -97,6 +98,7 @@
 	            <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
 	                <p>
 			Sr. software developer June 2016 - present time
+			</p>
 	            </span>
 	        </h2>
 
@@ -118,7 +120,7 @@
 	        <h2 class="western" style="margin-left: 0.81in; margin-right: 0.42in; margin-top: 0.42in; margin-bottom: 0.63in">
 	            Harman
 	            <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
-	            	<p> Software developer June 2015 - June 2016
+			    <p> Software developer June 2015 - June 2016 </p>
 	            </span>
 	        </h2>
 	        
@@ -137,7 +139,7 @@
 	    <h2 class="western" style="margin-left: 0.81in; margin-right: 0.42in; margin-top: 0.42in; margin-bottom: 0.63in">
 	        GlobalLogic
 	        <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
-		    <p>Junior software developer Mar 2014 - Jan 2015
+			<p> Junior software developer Mar 2014 - Jan 2015 </p>
 	        </span>
 	    </h2>
 
@@ -147,8 +149,7 @@
 	    	enables video-on-demand, broadcast, switched digital video based on
 	    	DOCSIS (Data Over Cable Service Interface Specifications) protocol 
 	    	<li/>
-	    	Responsibilities: bugfixing, <span lang="en-US"><i>Integration
-	    	testing</i></span> 
+	    	Responsibilities: bugfixing, Integration testing
 	    	<li/>
 	    	Stack: C++, python, Perl 
 	    </ul>
@@ -158,7 +159,7 @@
 	    <h2 class="western" style="margin-left: 0.81in; margin-right: 0.42in; margin-top: 0.42in; margin-bottom: 0.63in">
 	        State bureau &quot;Luch&quot; 
 	        <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
-			<p>software engineer Feb 2012 - Feb 2014 </p>
+			<p> software engineer Feb 2012 - Feb 2014 </p>
 	        </span>
 	    </h2>
 
