added languages amd stack and responsibilities at Harman

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 		<p>
 		Email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991.gmail.com </a> <br/>
 		Location: Lodz, Poland </br>
-		Born: 7 February 1991<br />
+		Born: 7 February 1991</br>
+		Languages: Russian, Polish, English </br>
 		CV online: <a href=" https://andrey-dubas.github.io/adubas/"> andrey-dubas.github.io/adubas/ </a>
 		</p>
 	</div>
@@ -46,11 +47,11 @@
 	<div id="self_description">
 		<p>
 			
-				Hi! My name is Andrii, I am software developer that
+				Hi! My name is Andrii, I am software developer who
 			specializes in C++ programming language. I have considerable
 			experience in dealing with people with different cultural
 			background at work. I like being a part of something that
-			considerably changes everyone's life and I would appreciate you
+			drastically changes everyone's life and I would appreciate you
 			bring me this opportunity. I could overstate here a lot about
 			myself, however the opposite, I hope, encourage you to meet me
 			personally. 
@@ -97,7 +98,7 @@
 	            Fujitsu technology solutions
 	            <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
 	                <p>
-			Sr. software developer June 2016 - present time
+			Sr. software developer June 2016 - present
 			</p>
 	            </span>
 	        </h2>
@@ -112,7 +113,7 @@
 	            communication API for other fujitsu&nbsp; modules 
 	            </li>
 	            <li>
-	            Stack: c/c++, HippoMocks 
+	            Stack: C/C++ (C++11), HippoMocks, ATAPI protocol, libcurl, boost, SNMP
 	            </li>
 	        </ul>
 
@@ -127,11 +128,11 @@
 	        <ul>
 	        	<li>
 	        	module for monitoring overall operating system (GenIVI linux
-	        	distribution) status, processes' status, generating system dump for
+	        	distribution) status, data collecting for post-morterm analysis for
 	        	automotive head unit 
 	        	</li>
-	        	<li> responsibilities: </li>
-	        	<li> Stack: </li>
+	        	<li> responsibilities: developing log processing system </li>
+	        	<li> Stack: c++11, docker, apache thrift, systemd/journald API, DBus, yocto </li>
 	        </ul>
 
 
@@ -197,6 +198,19 @@
 		<strong>Major:</strong> System Engineering<br/>
 		<strong>Minor:</strong> Software Engineering
 	</dd>
+
+        <dd class="clear"></dd>
+
+	<hr>
+
+	<div style="position: fixed;
+             left: 0;
+             bottom: 0;
+             width: 100%;
+             text-align: center;">
+	</div>
+
+
     </dl>
 </div>
 </body>
