--- a/myCV/index.html
+++ b/myCV/index.html
@@ -37,9 +37,9 @@
 
 		<p>
 		Email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991.gmail.com </a> <br/>
-		Location: Lodz, Poland </br>
+		Location: Berlin, Germany </br>
 		Born: 7 February 1991</br>
-		Languages: Russian, Polish, English </br>
+		Languages: Russian, Polish, English, German (A2) </br>
 		CV online: <a href="https://andrey-dubas.github.io/myCV/index.html"> andrey-dubas.github.io/adubas/ </a>
 		</p>
 	</div>
@@ -49,13 +49,15 @@
 		<p>
 			
 				Hi! My name is Andrii, I am software developer who
-			specializes in C++ programming language. I have considerable
+			got experience in Automotive industry (C++).
+			Currently I am a distributed systems engineer at Delivery Hero,
+			a delivery service that thrives in many countries. I have considerable
 			experience in dealing with people with different cultural
-			background at work. I like being a part of something that
+			background at work, I have already worked in 2 foreign countries.
+			I like being a part of something that
 			drastically changes everyone's life and I would appreciate you
 			bring me this opportunity. I could overstate here a lot about
-			myself, however the opposite, I hope, encourage you to meet me
-			personally. 
+			myself, and I encourage you to meet me personally. 
 		</p>
 	</div>
 
@@ -76,13 +78,15 @@
 
 		<ul>
 			<li> Python, C++ </li>
+			<li> PostgreSQL </li>
+			<li> Google Cloud, Kubernetes </li>
+			<li> Terraform, Helm </li>
 			<li> IPC: apache thrift </li>
 			<li> experience in Linux userspace development, general understanding of kernel-space. </li>
 			<li> Multithreading </li>
 			<li> c++11 standard </li>
 			<li> make, cmake  </li>
 			<li> networking </li>
-			<li> ATAPI protocol </li>
 		</ul>
 
 	    </dd>
@@ -95,11 +99,33 @@
 	    <dt> Experience </dt>
 
 	    <dd>
+			
+			<h2 class="western" style="margin-left: 0.81in; margin-right: 0.42in; margin-top: 0.42in; margin-bottom: 0.63in">
+	            Delivery Hero
+	            <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
+	                <p>
+			Software developer June 2020 - present
+			</p>
+	            </span>
+	        </h2>
+
+	        <ul>
+	            <li>
+	            Develop and maintain a microservice for selling a website's estate - banners, top results for category search, search term search
+		    </li>
+	            <li>
+	            responsibilities: backend of the tool for creating estate elements, outbound part for integration with 3rd party software. 
+	            </li>
+	            <li>
+	            Stack: Python, flask, google cloud, terraform, helm, gRPC, Drone CI, PostgreSQL
+	            </li>
+	        </ul>
+
 	        <h2 class="western" style="margin-left: 0.81in; margin-right: 0.42in; margin-top: 0.42in; margin-bottom: 0.63in">
 	            Fujitsu technology solutions
 	            <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
 	                <p>
-			Sr. software developer June 2016 - present
+			Sr. software developer June 2016 - May 2020
 			</p>
 	            </span>
 	        </h2>
