--- a/myCV/index.html
+++ b/myCV/index.html
@@ -39,7 +39,7 @@
 		Email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991.gmail.com </a> <br/>
 		Location: Berlin, Germany </br>
 		Born: 7 February 1991</br>
-		Languages: Russian, Polish, English, German (A2) </br>
+		Languages: Russian, Polish, English, German (B1) </br>
 		CV online: <a href="https://andrey-dubas.github.io/myCV/index.html"> andrey-dubas.github.io/adubas/ </a>
 		</p>
 	</div>
@@ -47,14 +47,13 @@
 
 	<div id="self_description">
 		<p>
-			
-				Hi! My name is Andrii, I am software developer who
-			got experience in Automotive industry (C++).
-			Currently I am a distributed systems engineer at Delivery Hero,
-			a delivery service that thrives in many countries. I have considerable
+
+			Hi! My name is Andrii, I am software developer with 10
+			years' experience in automotive and distributed systems.
+			I have considerable
 			experience in dealing with people with different cultural
 			background at work, I have already worked in 2 foreign countries.
-			I like being a part of something that
+			  I like being a part of something that
 			drastically changes everyone's life and I would appreciate you
 			bring me this opportunity. I could overstate here a lot about
 			myself, and I encourage you to meet me personally. 
@@ -77,16 +76,13 @@
 	        <p>
 
 		<ul>
-			<li> Python, C++ </li>
-			<li> PostgreSQL </li>
+			<li> Golang, Python, C++ </li>
+			<li> PostgreSQL, Redis, MongoDB </li>
+			<li> Kafka, Google Pub/Sub </li>
 			<li> Google Cloud, Kubernetes </li>
 			<li> Terraform, Helm </li>
-			<li> IPC: apache thrift </li>
-			<li> experience in Linux userspace development, general understanding of kernel-space. </li>
+			<li> gRPC </li>
 			<li> Multithreading </li>
-			<li> c++11 standard </li>
-			<li> make, cmake  </li>
-			<li> networking </li>
 		</ul>
 
 	    </dd>
@@ -104,17 +100,20 @@
 	            Delivery Hero
 	            <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
 	                <p>
-			Software developer June 2020 - present
+			Senior Software Engineer June 2022 - now
+			Software Engineer June 2020 - June 2022
 			</p>
 	            </span>
 	        </h2>
 
 	        <ul>
 	            <li>
-	            Develop and maintain a microservice for selling a website's estate - banners, top results for category search, search term search
+	            Develop and maintain a product-agnostic programmatic advertisement system with 50.000 RPM and 40 ms latency
 		    </li>
 	            <li>
-	            responsibilities: backend of the tool for creating estate elements, outbound part for integration with 3rd party software. 
+	            responsibilities: my team deals with ad server - the part of the system that
+							directly provides a set of promoted products per specific user/virtual real estate.
+							design and develop budget handling, auctioning system.
 	            </li>
 	            <li>
 	            Stack: Python, flask, google cloud, terraform, helm, gRPC, Drone CI, PostgreSQL
