--- a/myCV/index.html
+++ b/myCV/index.html
@@ -39,7 +39,7 @@
 		Email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991.gmail.com </a> <br/>
 		Location: Berlin, Germany </br>
 		Born: 7 February 1991</br>
-		Languages: Russian, Polish, English, German (B1) </br>
+		Languages: Ukrainian, Russian, Polish, English, German (B1) </br>
 		CV online: <a href="https://andrey-dubas.github.io/myCV/index.html"> andrey-dubas.github.io/adubas/ </a>
 		</p>
 	</div>
@@ -116,7 +116,7 @@
 							design and develop budget handling, auctioning system.
 	            </li>
 	            <li>
-	            Stack: Python, flask, google cloud, terraform, helm, gRPC, Drone CI, PostgreSQL
+	            Stack: Golang, Python, flask, google cloud, terraform, helm, gRPC, Drone CI, PostgreSQL
 	            </li>
 	        </ul>
 
