--- a/myCV/index.html
+++ b/myCV/index.html
@@ -36,7 +36,7 @@
 		<h1 class="western"> Andrii Dubas </h1>
 
 		<p>
-		Email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991.gmail.com </a> <br/>
+		Email: <a href="mailto:andreydubas1991@gmail.com"> andreydubas1991@gmail.com </a> <br/>
 		Location: Berlin, Germany </br>
 		Born: 7 February 1991</br>
 		Languages: Ukrainian, Russian, Polish, English, German (B1) </br>
