--- a/myCV/index.html
+++ b/myCV/index.html
@@ -100,7 +100,7 @@
 	            Delivery Hero
 	            <span id="Frame1" dir="ltr" style="position: absolute; left: 3.13in; width: 3.74in; height: 0.28in; border: none; padding: 0in; background: url('data:') repeat scroll ">
 	                <p>
-			Senior Software Engineer June 2022 - now
+			Senior Software Engineer June 2022 - April 2024
 			Software Engineer June 2020 - June 2022
 			</p>
 	            </span>
